--- a/src/TryMudBlazor.Client/wwwroot/index.html
+++ b/src/TryMudBlazor.Client/wwwroot/index.html
@@ -29,7 +29,8 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400" rel="stylesheet">
     <link href="_content/MudBlazor/MudBlazor.min.css?v=#{CACHE_TOKEN}#" rel="stylesheet" />
-    <link href="css/TryMudBlazor.min.css?v=#{CACHE_TOKEN}#" rel="stylesheet" />
+    <link href="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.css" rel="stylesheet" />
+    <link href="css/TryMudBlazor.min.css" rel="stylesheet" />
     <script src="lib/split.js/split.min.js"></script>
     <script src="lib/monaco-editor/min/vs/loader.js"></script>
 
@@ -59,7 +60,8 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js?v=#{CACHE_TOKEN}#"></script>
-    <script src="editor/main.js?v=#{CACHE_TOKEN}#"></script>
+    <script src="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.js"></script>
+    <script src="editor/main.js"></script>
     <script type="text/javascript">
         window.addEventListener('storage', (e) => {
             if (e.key == "userPreferences") {
